--- a/week-07/day-2/signup-style.css
+++ b/week-07/day-2/signup-style.css
@@ -2,56 +2,38 @@ body {
   background-color: lightgray;
   font-family: 'Raleway', sans-serif;
   color: grey;
+  justify-content: flex-end;
+  align-content: center;
 }
 
 main {
   margin-top: 100px;
   display: flex;
   justify-content: center;
-  align-content: space-around;
+  align-content: center;
+  box-shadow: 0px 2px 5px 0px rgb(136, 136, 136);
+  background-color: white;
+  width: fit-content;
 }
 
-form {
-  background-color: white;
+div {
+  border-width: 2px;
+  justify-content: center;
+  align-content: center;
   padding: 30px;
-  width: 400px;
+  width: 200px;
 }
 
 h2 {
-  text-transform: uppercase;
+  font-size: 30px;
   font-family: 'Nunito', sans-serif;
-}
-
-label {
-  display: block;
-  margin-top: 10px;
-  font-size: small;
-
+  color: black;
 }
 
 input {
   display: block;
   margin-top: 10px;
   height: 3em;
-  border: 1px solid lightgray;
-  border-radius: 3px;
-}
-
-#username, #password {
-  width: 100%;
-}
-
-.eye {
-  position: relative;
-  top:0;
-  left:0;
-}
-
-#icon {
-  position: absolute;
-right: 1.5em;
-bottom: 1em;
-cursor: pointer
 }
 
 a {
@@ -60,13 +42,13 @@ a {
   text-decoration: none;
   color: darkgray;
   font-size: small;
-
 }
 
 #login {
+  margin-top: 50px;
   border: 1px solid darkgray;
-  border-radius: 50px;
-  background-color: rgb(85, 85, 85);
+  border-radius: 5px;
+  background-color: rgb(55, 139, 55);
   width: 100px;
   height: 3em;
   color: white;
@@ -79,4 +61,43 @@ a {
 
 .textbox{
   border-left-style: none;
+  border-top-style: none;
+  border-right-style: none;
+  border-bottom-width: 4px;
+  border-bottom-color: rgb(55, 139, 55);
+  width: 100%;
+}
+
+.social{
+  font-weight: bold;
+  margin-top: 20px;
+  border-width: 0px;
+  border-radius: 5px;
+  width: 250px;
+  height: 40px;
+  color: white;
+  font-family: 'Nunito', sans-serif;
+}
+
+#or{
+  border-width: 0px;
+  border-radius: 200px;
+  width: 40px;
+  height: 40px;
+  color: black;
+  background-color: rgb(189, 189, 189);
+  font-family: 'Nunito', sans-serif;
+  box-shadow: 0px 5px 10px 0px rgb(136, 136, 136);
+}
+
+#facebook{
+  background-color: blue;
+}
+
+#twitter{
+  background-color: royalblue;
+}
+
+#google{
+  background-color: red;
 }
