--- a/week-06/day-4/src/main/resources/templates/AccountsPage.html
+++ b/week-06/day-4/src/main/resources/templates/AccountsPage.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Accounts Page</title>
+    <title>Accounts</title>
+    <meta charset="utf-8"/>
 </head>
 <body>
 <table>
-    <thead>
-    <tr>
-        <th th:text="#{}">Name</th>
-        <th th:text="#{}">Price</th>
+    <thed>
+        <tr>
+            <td>Owner</td>
+            <td>Balance</td>
+        </tr>
+    </thed>
+    <tr th:each="account : ${accounts}">
+        <td th:text="${bankaccount.name}"></td>
+        <td th:text="'Balance: ' + ${#numbers.formatDecimal(bankaccount.balance,0, 2, 'DEFAULT')} + ' ' + ${bankaccount.animalType}"></td>
     </tr>
-    </thead>
-    <tbody>
-    <tr th:each="prod: ${}">
-        <td th:text="${}">Oranges</td>
-        <td th:text="${})}">0.99</td>
-    </tr>
-    </tbody>
 </table>
+
 </body>
 </html>
