--- a/week-06/day-5/src/main/resources/templates/index.html
+++ b/week-06/day-5/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <div id="titlecont"><h1>My Shop</h1></div>
-    <div><a href="/only-available" class="Button">ONLY AVAILABLE</a><a href="/cheapest-first" class="Button">CHEAPEST FIRST</a><a href="/only-available" class="Button">CONTAINS NIKE</a><a href="/only-available" class="Button">AVERAGE STOCK</a><a href="/only-available" class="Button">MOST EXPENSIVE AVAILABLE</a></div>
+    <div><a href="/only-available" class="Button">ONLY AVAILABLE</a><a href="/cheapest-first" class="Button">CHEAPEST FIRST</a><a href="/contains-nike" class="Button">CONTAINS NIKE</a><a href="/only-available" class="Button">AVERAGE STOCK</a><a href="/only-available" class="Button">MOST EXPENSIVE AVAILABLE</a></div>
 </header>
 <table>
     <thead>
