new method called average

--- a/week-06/day-5/src/main/resources/templates/average.html
+++ b/week-06/day-5/src/main/resources/templates/average.html
@@ -10,19 +10,6 @@
     <div id="titlecont"><h1>My Shop</h1></div>
     <div><a href="/only-available" class="Button">ONLY AVAILABLE</a><a href="/cheapest-first" class="Button">CHEAPEST FIRST</a><a href="/contains-nike" class="Button">CONTAINS NIKE</a><a href="/average-stock" class="Button">AVERAGE STOCK</a><a href="" class="Button">MOST EXPENSIVE AVAILABLE</a></div>
 </header>
-<table>
-    <thead>
-    <td>Name</td>
-    <td>Description</td>
-    <td>Price</td>
-    <td>Quantity</td>
-    </thead>
-    <tr th:each="item : ${Store}">
-        <td th:text="${item.getName()}"></td>
-        <td th:text="${item.getDescription()}"></td>
-        <td th:text="${item.getPrice()}"></td>
-        <td th:text="${item.getQuantity()}"></td>
-    </tr>
-</table>
+<p>The average stock:</p><p th:text="average"}></p>
 </body>
 </html>
