--- a/week-06/day-5/src/main/resources/templates/index.html
+++ b/week-06/day-5/src/main/resources/templates/index.html
@@ -10,6 +10,10 @@
     <div id="titlecont"><h1>My Shop</h1></div>
     <div><a href="/only-available" class="Button">ONLY AVAILABLE</a><a href="/cheapest-first" class="Button">CHEAPEST FIRST</a><a href="/contains-nike" class="Button">CONTAINS NIKE</a><a href="/average-stock" class="Button">AVERAGE STOCK</a><a href="" class="Button">MOST EXPENSIVE AVAILABLE</a></div>
 </header>
+<form method="post" action="/search">
+    <input type="search" placeholder="search here" name="searchbar">
+    <button type="submit">Search</button>
+</form>
 <table>
     <thead>
     <td>Name</td>
