--- a/week-06/day-5/src/main/resources/templates/index.html
+++ b/week-06/day-5/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/style.css}"/>
-    <title>Title</title>
+    <title>My Webshop</title>
 </head>
 <body>
 <header>
