added utility service

--- a/week-07/day-3/di-spring/src/main/resources/templates/index.html
+++ b/week-07/day-3/di-spring/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
     <title>Index</title>
 </head>
 <body>
-
+<div><a href="/useful" class="Button">USEFUL</a><a href="/useful/colored" class="Button">COLORED</a><a href="/useful/email" class="Button">MAIL</a><a href="/decoder" class="Button">DECODER</a></div>
 </body>
 </html>
