--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <div><ul><li><a href="/information" class="Button">Information</a></li></ul></div>
-<img src="greenfox.png" alt="GreenFox" width="200" height="200">
-<p>This is Mr. Fox. Currently living on pizza and lemonade. He knows two tricks.</p>
+<img src="./greenfox.png" alt="GreenFox" width="200" height="200">
+<p>This is </p><p th:text="${name}"></p><p>. Currently living on pizza and lemonade. He knows two tricks.</p>
 <h1>Known tricks</h1>
 <ul><li>write HTML</li><li>code in Java</li></ul>
 </body>
