fox, trick, foxclub classes and two enums

--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <div><ul><li><a href="/information" class="Button">Information</a></li></ul></div>
 <img src="./greenfox.png" alt="GreenFox" width="200" height="200">
-<p>This is </p><p th:text="${name}"></p><p>. Currently living on pizza and lemonade. He knows two tricks.</p>
+<p>This is </p><p th:text="${name}"></p><p>. Currently living on </p><p th:text="${food}"></p><p> and </p><p th:text="${drink}"></p><p>. </p><p th:text="${numberoftricks}"></p>
 <h1>Known tricks</h1>
 <ul><li>write HTML</li><li>code in Java</li></ul>
 </body>
