--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -6,9 +6,9 @@
     <title>Fox Club</title>
 </head>
 <body>
-<div><ul><li><a href="/information" class="Button">Information</a></li><li><a href="/login" class="Button">New fox / Login</a></li></ul></div>
+<div><ul class="nav"><li><a href="/information" class="Button">Information</a></li><li><a href="/login" class="Button">New fox / Login</a></li></ul></div>
 <img src="./greenfox.png" alt="GreenFox" width="200" height="200">
-<div><p>This is </p><p th:text="${name}"></p><p>. Currently living on </p><p th:text="${food}"></p><p> and </p><p th:text="${drink}"></p><p>. </p><p th:text="${numberoftricks}"></p></div>
+<div><p>This is </p><p id="name" th:text="${name}"></p><p>. Currently living on </p><p th:text="${food}"></p><p> and </p><p th:text="${drink}"></p><p>. </p><p th:text="${numberoftricks}"></p></div>
 <h1>Known tricks</h1>
 <ul><li>write HTML</li><li>code in Java</li></ul>
 </body>
