--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div><ul class="nav"><li><a href="/information" class="Button">Information</a></li><li><a href="/login" class="Button">New fox / Login</a></li></ul></div>
 <h1>Welcome to Programmer Fox Club!</h1>
 <form method="post" action="/name">
     <p>Please provide a name, so you can associate to your pet!</p>
