--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div><ul class="nav"><h1 id="title">Fox Club</h1><li><a href="/information" class="Button">Information</a></li><li><a href="/login" class="Button">New fox / Login</a></li></ul></div>
+<div><ul class="nav"><h1 id="title">Fox Club</h1><li><a href="/login" class="Button">Information</a></li><li><a href="/nutritionStore" class="Button">Nutrition Store</a></li><li><a href="/trickCenter" class="Button">Trick Center</a></li></ul></div>
 <h1>Welcome to Programmer Fox Club!</h1>
 <form method="post" action="/name">
     <p>Please provide a name, so you can associate to your pet!</p>
