--- a/week-07/day-4/src/main/resources/static/style.css
+++ b/week-07/day-4/src/main/resources/static/style.css
@@ -3,15 +3,15 @@
 .nav {
     background-color: lightgreen;
     list-style-type: none;
-    text-align: center;
+    text-align: left;
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    height: 60px;
 }
 
 .nav li {
     display: inline-block;
     font-size: 20px;
-    padding: 20px;
     font-family: 'Source Sans Pro', sans-serif;
     color: aliceblue;
 }
@@ -26,7 +26,7 @@ h1{
     font-family: 'Modak', cursive;
 }
 
-p{
+p, h3{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -65,6 +65,7 @@ a:active{
     width: 100%;
     height: 50px;
     content-align: center;
+    display: inline;
 }
 
 select, input {
