--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <div><ul class="nav"><li><h1 id="title">Fox Club</h1></li>
     <li><a href="/login" class="Button">Login</a></li>
     <li><a display="disabled" class="Button">Nutrition Store</a></li>
-    <li><a href="/trickCenter" class="Button">Trick Center</a></li></ul></div>
+    <li><a display="disabled" class="Button">Trick Center</a></li></ul></div>
 <h1>Welcome to Programmer Fox Club!</h1>
 <form method="post" action="/name">
     <p>Please provide a name, so you can associate to your pet!</p>
