--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 <form method="post" action="/name">
     <p>Please provide a name, so you can associate to your pet!</p>
     <label for="name">Name</label>
-    <input type="text" id="name" name="new-name">
+    <input type="text" id="name" name="name">
     <input type="submit" value="Go">
 </form>
 </body>
