--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -6,15 +6,19 @@
     <title>Fox Club</title>
 </head>
 <body>
-<div><ul class="nav"><li><h1 id="title">Fox Club</h1></li>
+<div><ul class="nav">
+    <li><h1 id="title">Fox Club</h1></li>
     <li><a href="/login" class="Button">Login</a></li>
     <li><a th:href="@{/nutritionStore(name=${name})}" class="Button">Nutrition Store</a></li>
-    <li><a th:href="@{/trickCenter(name=${name})}" class="Button">Trick Center</a></li></ul></div>
+    <li><a th:href="@{/trickCenter(name=${name})}" class="Button">Trick Center</a></li></ul>
+</div>
+<div id="content">
 <img src="./greenfox.png" alt="GreenFox" width="200" height="200">
 <div><p th:text="'This is ' + ${name} + '. Currently living on ' + ${food} + ' and ' + ${drink} + '. ' + ${numberoftricks}"></p></div>
 <h1>Known tricks</h1>
 <ul th:each="trick : ${tricks}">
     <li th:text="${trick}"></li>
 </ul>
+</div>
 </body>
 </html>
