--- a/week-08/day-1/todo/src/main/resources/templates/todolist.html
+++ b/week-08/day-1/todo/src/main/resources/templates/todolist.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<h1>Todos for today:</h1>
+<ul th:each="todo : ${todos}">
+    <li th:text="${todo.title}"></li>
+    <td th:text="${todo.urgent}"></td>
+    <td th:text="${todo.done}"></td>
+</ul>
 </body>
 </html>
