--- a/week-08/day-4/reddit/src/main/resources/templates/read.html
+++ b/week-08/day-4/reddit/src/main/resources/templates/read.html
@@ -25,7 +25,8 @@
 </nav>
 <div id="main_content">
         <arc>
-
+            <h1 th:text="{art.title}"></h1>
+            <p th:text="{art.content}"></p>
         </arc>
     </table>
 </div>
