--- a/week-08/day-4/reddit/src/main/resources/templates/index.html
+++ b/week-08/day-4/reddit/src/main/resources/templates/index.html
@@ -34,8 +34,8 @@
     </tr>
     <tr th:each="art : ${articles}">
         <td th:text="${art.popularity}">
-        <td><a type="button" value="Raise" class="btn btn-success" th:href="@{/raise/} + ${art.id}">+</a>
-            <a type="button" value="Reduce" class="btn btn-danger" th:href="@{/reduce/} + ${art.id}"> - </a></td>
+        <td><a type="button" value=${art} class="btn btn-success" th:href="@{/raise/} + ${art.id}">+</a>
+            <a type="button" value=${art} class="btn btn-danger" th:href="@{/reduce/} + ${art.id}"> - </a></td>
         <td><a type="button" value="Reduce" class="btn btn-light" th:href="${art.content}" th:text="${art.title}"></a></td>
     </tr>
     </thead>
