new date format

--- a/week-08/day-4/reddit/src/main/resources/templates/login.html
+++ b/week-08/day-4/reddit/src/main/resources/templates/login.html
@@ -29,9 +29,7 @@
         <input id="name" type="text" name="name"><br>
         <label for="password">Password:</label>
         <input id="password" type="password" name="password"><br>
-        <label for="passwordAgain">Password again:</label>
-        <input id="passwordAgain" type="password" name="passwordAgain"><br>
-        <button type="submit">Registrate</button>
+        <button type="submit">Log in</button>
     </form>
 </div>
 </body>
