login page works

--- a/week-08/day-4/reddit/src/main/resources/templates/login.html
+++ b/week-08/day-4/reddit/src/main/resources/templates/login.html
@@ -31,6 +31,7 @@
         <input id="password" type="password" name="password"><br>
         <button type="submit">Log in</button>
     </form>
+    <a th:href="@{/register}" class="nav-link">Register</a>
 </div>
 </body>
 </html>
