--- a/week-09/day-5/url_aliaser/src/main/resources/templates/main.html
+++ b/week-09/day-5/url_aliaser/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
@@ -7,6 +7,7 @@
 </head>
 <body>
 <form action="/save-link" method="post">
+    <p th:text="${message}"></p>
     <label for="url">URL</label>
     <input id="url" type="text" name="url"><br>
     <label for="alias">Alias</label>
